tests/ui/async-await/drop-tracking-unresolved-typeck-results.stderr
error: higher-ranked subtype error
  --> $DIR/drop-tracking-unresolved-typeck-results.rs:98:5
   |
LL | /     send(async {
LL | |
LL | |
LL | |         Next(&Buffered(Map(Empty(PhantomData), ready::<&()>), FuturesOrdered(PhantomData), 0)).await
LL | |     });
   | |______^

error: higher-ranked subtype error
  --> $DIR/drop-tracking-unresolved-typeck-results.rs:98:5
   |
LL | /     send(async {
LL | |
LL | |
LL | |         Next(&Buffered(Map(Empty(PhantomData), ready::<&()>), FuturesOrdered(PhantomData), 0)).await
LL | |     });
   | |______^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

